Fixed header on safari

--- a/portfolio/asptemplate/src/css/components/header.styl
+++ b/portfolio/asptemplate/src/css/components/header.styl
@@ -21,7 +21,7 @@
         text-decoration none
         display block
         height auto
-        width 100%
+        flex 1 0 auto
         @media screen and (min-width: 640px)
             width 100px
     img
@@ -42,7 +42,7 @@
         width 100%
         display flex
         flex-flow row wrap
-        flex 1
+        flex 1 0 auto
         align-items center
         justify-content center
         @media screen and (min-width: 640px)
